# chat

./: .pre-commit-config.yaml  Cargo.toml  _typos.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  log_headers.rs  mod.rs  server_time.rs
chat_core/src/pubsub/: amqp.rs  mod.rs  notification.rs  pg.rs
chat_core/src/utils/: config.rs  jwt.rs  mod.rs
chat_server/: Cargo.toml  app.yaml
chat_server/api-docs/: openapi.json
chat_server/asserts/: test.sql
chat_server/src/: config.rs  error.rs  gen_openapi.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  chat_file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: integrate.rs
migrations/: 20240606134411_init.sql
notify_server/: Cargo.toml  index.html  notify.yaml
notify_server/assets/: index.html
notify_server/src/: config.rs  handler.rs  lib.rs  main.rs  notify.rs  sse.rs
