[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
mime_guess = "2.0.5"
sha1 = "0.10.6"
hex = "0.4.3"
tokio-util = "0.7.11"

[dev-dependencies]
sqlx-db-tester = "0.4.0"
http-body-util = "0.1.1"
