[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chat-core = { workspace = true }
chrono = { workspace = true }
dashmap = "6.0.1"
futures = "0.3.30"
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tokio = { workspace = true }
tokio-stream = "0.1.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
